== 0.5.0, (May 31, 2012)

Changes:
  - Updated to guard version 1.1 (throw :task_has_failed error and run_on_changes)

== 0.4.0, (Feb 9, 2012)

Features:
  - Added support for starting passenger under sudo/rvmsudo [by andrewtimberlake]

Changes:
  - updated guard version [by dennis27]

Fixes:
  - Don't display 'Stopping Passenger...' when :standalone => false [by medvedobijec]

== 0.3.0, (Mar 2, 2011)

Features:
  - New <tt>:cli</tt> option for passing Passenger CLI option to the runner.
  - Deprecation of <tt>:port</tt>, <tt>:environment</tt> options.
  - New <tt>:notification</tt> option (to disable Growl/Libnotify notifications).

Fixes:
  - Shut down guard if passenger failed to stop (prevents "locked in guard" syndrome when passenger is not running)

== 0.2.1, (Jan 19, 2010)

Changes:
  - Change dependency to guard that the new version is loaded

== 0.2.0, (Nov 25, 2010) [by rymai]

Changes:
  - Renamed Toucher to Pinger (it was confusing with the "touch" command used to restart Passenger)
  - Renamed :touch option to :ping, and set it to false by default
  - Ping localhost in a new thread in order not to block other guards execution, notify of the ping's result

== 0.1.0 (Nov 06, 2010)

Features:
  - Add touching
  - Activate Passenger standalone by default