@@ -8,10 +8,14 @@ module Guard
     autoload :Runner, 'guard/passenger/runner'
     autoload :Pinger, 'guard/passenger/pinger'
 
-    attr_reader :cli_start, :cli_stop, :ping, :notification, :sudo
+    attr_reader :cli_start, :cli_stop, :ping, :notification, :sudo, :running
 
     def standalone?
       @standalone
+    end
+
+    def running?
+      @running
     end
 
     # =================
@@ -21,19 +25,12 @@ module Guard
     def initialize(watchers = [], options = {})
       super
 
-      warn_deprectation options
       @standalone   = options[:standalone].nil? ? true : options[:standalone]
       @cli_start    = init_cli(options)
       @cli_stop     = cli_stop
       @notification = options[:notification].nil? ? true : options[:notification]
 
-      ping_opt = unless options[:touch].nil?
-        UI.info "Warning: The :touch option has been replaced by the :ping option, usage is still the same."
-        options[:touch]
-      else
-        options[:ping]
-      end
-      @ping = ping_opt.eql?(true) ? '/' : ping_opt
+      @ping = options[:ping].eql?(true) ? '/' : options[:ping]
 
       @sudo = options[:sudo] || ''
       @sudo = @sudo.eql?(true) ? 'sudo' : @sudo
@@ -42,12 +39,16 @@ module Guard
     # Call once when guard starts
     def start
       UI.info 'Guard::Passenger is running!'
-      standalone? ? Runner.start_passenger(cli_start, @sudo) : true
+      if standalone?
+        running = Runner.start_passenger(cli_start, @sudo)
+      else
+        true
+      end
     end
 
     # Call with Ctrl-C signal (when Guard quit)
     def stop
-      if standalone?
+      if standalone? && running?
         UI.info 'Stopping Passenger...'
         Runner.stop_passenger(cli_stop, @sudo)
       end
@@ -69,8 +70,6 @@ module Guard
       def init_cli options={}
         cmd_parts = []
         cmd_parts << (options[:cli].nil? ? '--daemonize' : options[:cli])
-        cmd_parts << "--port #{options[:port]}" if options[:port] #DEPRICATED
-        cmd_parts << "--environment #{options[:env]}" if options[:env] #DEPRICATED
         cmd_parts.join(' ')
       end
 
@@ -110,16 +109,6 @@ module Guard
         restarted = Runner.restart_passenger
         Pinger.ping(address, port, notification, ping) if ping
         restarted
-      end
-
-      def warn_deprectation(options={})
-        options[:environment] = options[:env] if options[:env]
-        [:port, :environment].each do |option|
-          key, value = [option, option.to_s.gsub('_', '-')]
-          if options.key?(key)
-            UI.info "DEPRECATION WARNING: The :#{key} option is deprecated. Pass standard command line argument \"--#{value}\" to Passenger with the :cli option."
-          end
-        end
       end
 
   end
